--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   list-style: none;
   cursor: pointer;
+   font-family: Poppins, sans-serif;
 }
 
 .top-banner {
@@ -16,10 +17,13 @@
       height: 50px;
       font-weight: 800;
       border-bottom: 1px solid #f4dacd;
-      font-family: Arial, sans-serif;
+      font-family:sans-serif;
       text-decoration: underline;
     }
-
+   
+    .text-3:hover{
+      text-decoration: underline;
+    }
     .top-banner a {
       color: black;
       text-decoration: none;
@@ -34,3 +38,117 @@
       border-left: 1px solid rgb(142, 140, 140);
       height: 25px;
     }
+    
+    .search{
+      width: 20px;
+      height: 20px;
+    }
+  .nav2-img{
+    display: flex;
+    gap: 2px;
+  }
+  .nav_1{
+    display: flex;
+    justify-content: end;
+    gap: 60px;
+    
+  }
+  .Flowerimg-1{
+    display: flex;
+    justify-content: center;
+    padding: 16px 60px;
+    border: 1px solid #fffcf9;
+    background-color: #fffcf9;
+    gap: 20px;
+    font-size: 14px;
+    height:50px;
+     font-family: sans-serif;
+    font-weight:800;
+  }
+  
+  .Flowerimg{
+    width: 230px;
+    height: 45px;
+     margin: 10px 0px;
+  }
+
+
+  .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: white;
+      font-size: 15px;
+      font-weight:bold ;
+      width: 180px;
+      text-align: center;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      z-index: 1;
+    }
+    
+
+    .dropdown-content a {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      transition: background-color 0.3s;
+    }
+
+    /* Hover effect on item */
+    .dropdown-content a:hover {
+        background-color: #f4dacd;
+
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+  .button-1 {
+    width: 110px;
+    height: 40px;
+    font-size: 17px;
+    background-color:#fff;
+    border: transparent;
+    color: #252727;
+}
+  .button-1:hover{
+       border: 2px solid rgb(243, 71, 71);
+       height: 55px;
+}
+.newwine:hover{
+       color: #880e4f;
+       height: 40px;
+       scale: 1.2;
+        transition: 0.5s;
+}
+.newwine{
+    font-size: 15px;
+    font-weight: bold;
+}
+.parents_wine_menu_list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid gray;
+  border-bottom: none;
+  border-top: none;
+  height: 50px;
+  gap: 16px;
+   /* box-shadow: 0px 4px 8px rgba(0,0,0,0.2);*/
+}
+
+.parents-1{
+  border: 1px solid black;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  height: 60px;
+  margin-top: 10px;
+  background-color: #fffcf9;
+  
+}
