--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -62,7 +63,7 @@
     gap: 20px;
     font-size: 14px;
     height:50px;
-     font-family: sans-serif;
+     font-family: Arial,sans-serif;
     font-weight:800;
   }
   
@@ -118,6 +119,7 @@
 }
   .button-1:hover{
        border: 2px solid rgb(243, 71, 71);
+       background-color: none !important;
        height: 55px;
 }
 .newwine:hover{
@@ -143,7 +145,7 @@
 }
 
 .parents-1{
-  border: 1px solid black;
+  border: 2px solid black;
   border-top: none;
   border-left: none;
   border-right: none;
@@ -152,3 +154,112 @@
   background-color: #fffcf9;
   
 }
+
+.bacground_img{
+  width: 100%;
+  height: 310px;
+  object-fit: cover;
+  display: block;
+  position: relative;
+  z-index: 0;
+}
+
+
+ input,
+        input :focus {
+            border: 0 !important;
+            outline: none !important;
+            box-shadow: none !important;
+            font-size: 18px;
+            padding: 5px 0px;
+            margin-left: 10px;
+        }
+        .fieldset-1{
+          width: 280px;
+          height: 62px;
+          border: 1px solid black;
+          border-radius: 5px;
+        }
+        .fieldset-2{
+          width: 240px;
+          height: 62px;
+            border: 1px solid black;
+          border-radius: 5px;
+        }
+         .star_2{
+          display: flex;
+          position: relative;
+         }
+        
+         .star_1{
+          display: flex;
+          gap: 10px;
+         }
+
+
+        .position-1 {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+  width: 52%;
+  height: 260px;
+  padding: 20px 30px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px 0px;
+}
+
+        .Calendar-img{
+          width: 48px;
+          height: 53px;
+          position: absolute;
+          top: 9px;
+          left: 225px;
+          border-radius: 5px;
+          border: 1px solid #b3b3b3;
+          background-color: #b3b3b3;
+        }
+        .find{
+         font-family: "Playfair Display", serif;
+          font-style: italic;
+          font-size: 28px;
+          font-optical-sizing: auto;
+          padding-bottom: 10px;
+          color: #484848;
+        }
+
+        .star{
+          padding-bottom: 15px;
+          font-size: 15px;
+        }
+
+        legend{
+          color:#353837;
+        }
+      .buttonserch{
+          width: 280px;
+          height: 50px;
+          text-align: center;
+          font-size: 19px;
+          font-weight: bold;
+          border-radius: 20px;
+          background-color: black;
+          border: transparent;
+          color: white;
+          margin: 15px 0px;
+        }
+       .buttonserch:hover{
+          background-color: #f4dacd;
+          color: black;
+          border: 1px solid black;
+        }
+
+        .parents_main2{
+         position: relative;
+          z-index: 0; 
+        }
+       legend{
+        margin: 0px 10px;
+       }
