--- a/CSS/index.css
+++ b/CSS/index.css
@@ -263,3 +263,110 @@
        legend{
         margin: 0px 10px;
        }
+
+
+        .A{
+      width: 230px;
+      height: 220px;
+      overflow: hidden;
+     object-fit: fill;
+     border-radius: 10px;
+     border: 1px solid #f3e2d9;
+    }
+    .A .Lilies{
+      height: inherit;
+      width: inherit;
+      transition: 0.5s ease;
+    }
+    
+     .A .Lilies:hover{
+      transform: scale(1.1);
+    }
+  .summer_img{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin: 20px 0px;
+
+  }
+  .B{
+    text-align: center;
+    padding: 10px 0px;
+    font-size: 18px;
+    opacity: 0.9;
+  }
+   .B:hover{
+    text-decoration: underline;
+     color: #880e4f;
+   }
+   .B1:hover{
+      text-decoration: underline;
+       color: #880e4f;
+   }
+
+  .B1{
+    text-align: center;
+      font-size: 18px;
+      font-weight: bolder;
+      
+  }
+
+  .summer_text{
+    text-align: center;
+     font-family: "Playfair Display", serif;
+          font-style: italic;
+          font-weight: normal;
+          font-size: 45px;
+          padding: 20px 0px;
+          text-decoration: underline;
+  }
+  .summer_text:hover{
+    color: #880e4f;
+  }
+
+
+  .button_2 {
+  cursor: pointer;
+  position: relative;
+  width: 200px;
+  height: 55px;
+  padding: 10px 0px;
+  margin: 20px 500px;
+  font-size: 18px;
+  color:white;
+  border: 2px solid black;
+  border-radius: 34px;
+  background-color: black;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
+}
+
+.button_2::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 150px;
+  height: 55px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color:#fff;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.button_2:hover::before {
+  scale: 2;
+}
+
+.button_2:hover {
+  color:black;
+  scale: 1.1;
+   transition: 10s ease ease-in;
+  box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button_2:active {
+  scale: 1;
+}
