--- a/CSS/index.css
+++ b/CSS/index.css
@@ -381,7 +381,7 @@
   border: 2px solid #f3eeea;
    height: 370px;
    width: 606px;
-   background-color: #f3eeea;
+   background-color: #eee1d6;
    padding: 100px 0px;
    word-wrap: 2px;
 }
