--- a/CSS/index.css
+++ b/CSS/index.css
@@ -332,7 +332,7 @@
   height: 55px;
   padding: 10px 0px;
   margin: 20px 500px;
-  font-size: 18px;
+  font-size: 20px;
   color:white;
   border: 2px solid black;
   border-radius: 34px;
@@ -388,7 +388,7 @@
 
 .happiest{
   display: flex;
-  margin: 50px 0px;
+  margin-top: 70px;
 }
 
 .button_3 {
@@ -450,3 +450,110 @@
   padding: 17px 0px;
 }
 
+
+
+     .K{
+      width: 230px;
+      height: 220px;
+      overflow: hidden;
+     object-fit: fill;
+     border-radius: 10px;
+     border: 1px solid #f3e2d9;
+    }
+    .K .Lilies_1{
+      height: inherit;
+      width: inherit;
+      transition: 0.5s ease;
+    }
+    
+    .K .Lilies_1:hover{
+      transform: scale(1.1);
+    }
+  .Farther_img{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin: 30px 0px;
+
+  }
+  .C{
+    text-align: center;
+    padding: 12px 0px;
+    font-size: 18px;
+    opacity: 0.9;
+  }
+   .C:hover{
+    text-decoration: underline;
+     color: #880e4f;
+   }
+   .C1:hover{
+      text-decoration: underline;
+       color: #880e4f;
+   }
+
+  .C1{
+    text-align: center;
+      font-size: 18px;
+      font-weight: bolder;
+      
+  }
+
+  .summer_text{
+    text-align: center;
+     font-family: "Playfair Display", serif;
+          font-style: italic;
+          font-weight: normal;
+          font-size: 45px;
+          padding-top: 40px;
+          text-decoration: underline;
+  }
+  .summer_text:hover{
+    color: #880e4f;
+  }
+
+
+  .button_4 {
+  cursor: pointer;
+  position: relative;
+  width: 200px;
+  height: 55px;
+  padding: 10px 0px;
+  margin: 0px 500px;
+  font-size: 15px;
+  color:white;
+  border: 2px solid black;
+  border-radius: 34px;
+  background-color: black;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
+}
+
+.button_4::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 150px;
+  height: 55px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color:#fff;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.button_4:hover::before {
+  scale: 2;
+}
+
+.button_4:hover {
+  color:black;
+  scale: 1.1;
+   transition: 10s ease ease-in;
+  box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button_4:active {
+  scale: 1;
+}
