--- a/CSS/index.css
+++ b/CSS/index.css
@@ -331,8 +331,8 @@
   width: 200px;
   height: 55px;
   padding: 10px 0px;
-  margin: 20px 500px;
-  font-size: 20px;
+  margin-left: 510px;
+  font-size: 17px;
   color:white;
   border: 2px solid black;
   border-radius: 34px;
@@ -518,7 +518,7 @@
   width: 200px;
   height: 55px;
   padding: 10px 0px;
-  margin: 0px 500px;
+  margin-left: 510px;
   font-size: 15px;
   color:white;
   border: 2px solid black;
@@ -556,4 +556,85 @@
 
 .button_4:active {
   scale: 1;
+}
+
+
+
+.blooms_img{
+  width: 620px;
+  height: 370px;
+  object-fit:cover;
+  
+}
+.blooms_3{
+  border: 2px solid #f3eeea;
+   height: 370px;
+   width: 606px;
+   background-color: #eee1d6;
+   padding: 100px 0px;
+   word-wrap: 2px;
+}
+
+.blooms{
+  display: flex;
+  margin-top: 70px;
+}
+
+.button_5 {
+  cursor: pointer;
+  position: relative;
+  width: 200px;
+  height: 55px;
+  padding: 10px 0px;
+  margin: 10px 0px;
+  margin-left: 200px;
+  font-size: 15px;
+  color:white;
+  border: 2px solid black;
+  border-radius: 34px;
+  background-color: black;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
+}
+
+.button_5::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 150px;
+  height: 55px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color:#fff;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.button_5:hover::before {
+  scale: 2;
+}
+
+.button_5:hover {
+  color:black;
+  scale: 1.1;
+   transition: 10s ease ease-in;
+  box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button_5:active {
+  scale: 1;
+}
+
+.blooms_text{
+  text-align: center;
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 38px;
+}
+.blooms_text-1{
+  text-align: center;
+  padding: 17px 0px;
 }
