--- a/CSS/index.css
+++ b/CSS/index.css
@@ -638,3 +638,84 @@
   text-align: center;
   padding: 17px 0px;
 }
+
+/*this animtion*/
+.slider_3D {
+      background: linear-gradient(to right,#f8c2e0, #aae0d0,#e0c3fc);
+      display: flex; 
+      justify-content: center; 
+      margin: 20px 0px;
+      align-items: center;    
+      height: 350px; 
+      font-family: sans-serif;
+      width: 100%;
+    }
+
+    .carousel-container {
+      width: 300px;
+      height: 220px;
+      perspective: 1000px;
+      position: relative;
+    }
+
+    .carousel {
+      width: 100%; height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+    }
+    .carousel img {
+      position: absolute;
+      width: 290px; 
+      height: 180px;
+      border-radius: 10px;
+      transition: all 0.5s ease;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      opacity: 0; transform: scale(0.7);
+    }
+    .carousel img.active {
+      opacity: 1;
+      transform: translateX(0) scale(1);
+      z-index: 5;
+    }
+    .carousel img.prev {
+      opacity: 0.8;
+      transform: translateX(-200px) scale(0.85) rotateY(25deg);
+      z-index: 4;
+    }
+    .carousel img.next {
+      opacity: 0.8;
+      transform: translateX(200px) scale(0.85) rotateY(-25deg);
+      z-index: 4;
+    }
+    .carousel img.prev2 {
+      opacity: 0.5;
+      transform: translateX(-360px) scale(0.65) rotateY(45deg);
+      z-index: 2;
+    }
+    .carousel img.next2 {
+      opacity: 0.5;
+      transform: translateX(360px) scale(0.65) rotateY(-45deg);
+      z-index: 2;
+    }
+    .btns {
+      position: absolute; 
+      bottom: -40px;
+      width: 100%; 
+      display: flex;
+      justify-content: space-between;
+    }
+      .btns button:hover{
+        background-color:black;
+        color: #fff;
+        border-radius: 50%;
+        transition: all 0.5s ease-in-out;
+      }
+    .btns button {
+      background: #fff; 
+      border: none;
+      padding: 10px 20px; 
+      font-size: 18px;
+      cursor: pointer; 
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
