--- a/CSS/index.css
+++ b/CSS/index.css
@@ -945,3 +945,98 @@
 .parents_main_4:hover .Hire-6 {
   animation-play-state: paused;
 }
+
+
+.V{
+      width: 230px;
+      height: 220px;
+      overflow: hidden;
+     object-fit: fill;
+     border-radius: 10px;
+     border: 1px solid #f3e2d9;
+    }
+    .V .Sweet_1{
+      height: inherit;
+      width: inherit;
+      transition: 0.5s ease;
+    }
+    
+    .V .Sweet_1:hover{
+      transform: scale(1.1);
+    }
+  .Sweet_img{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin: 30px 0px;
+
+  }
+  .D{
+    text-align: center;
+    padding: 12px 0px;
+    font-size: 18px;
+    opacity: 0.9;
+  }
+   .D:hover{
+    text-decoration: underline;
+     color: #880e4f;
+   }
+   .D1:hover{
+      text-decoration: underline;
+       color: #880e4f;
+   }
+
+  .D1{
+    text-align: center;
+      font-size: 18px;
+      font-weight: bolder;
+      
+  }
+
+  
+
+  .button_8 {
+  cursor: pointer;
+  position: relative;
+  width: 200px;
+  height: 55px;
+  padding: 17px 0px;
+  margin-left: 510px;
+  font-size: 17px;
+  color:white;
+  border: 2px solid black;
+  border-radius: 34px;
+  background-color: black;
+  font-weight: 600;
+  transition: all 0.3s cubic-bezier(0.23, 1, 0.320, 1);
+  overflow: hidden;
+}
+
+.button_8::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  margin: auto;
+  width: 150px;
+  height: 55px;
+  border-radius: inherit;
+  scale: 0;
+  z-index: -1;
+  background-color:#fff;
+  transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
+}
+
+.button_8:hover::before {
+  scale: 2;
+}
+
+.button_8:hover {
+  color:black;
+  scale: 1.1;
+   transition: 10s ease ease-in;
+  box-shadow: 0 0px 20px rgba(193, 163, 98,0.4);
+}
+
+.button_8:active {
+  scale: 1;
+}
