--- a/CSS/index.css
+++ b/CSS/index.css
@@ -924,9 +924,9 @@
 .Hire-6 {
   position: absolute;
   height: inherit;
-  animation: scroll-5 var(--duration, 15s) linear infinite;
+  animation: scroll-5 var(--duration, 12s) linear infinite;
   left: 100%;
-  animation-delay: calc(var(--duration, 15s) / 7 * (7 - var(--k)) * -1);
+  animation-delay: calc(var(--duration, 12s) / 7 * (7 - var(--k)) * -1);
 }
 
 
@@ -1039,4 +1039,86 @@
 
 .button_8:active {
   scale: 1;
+}
+
+.bpl_bk_img {
+  width: 100%;
+  display: block;
+  position: relative;
+  z-index: 0;
+}
+
+.bpl_text{
+
+  font-family: "Playfair Display", serif;
+  font-style: italic;
+  font-weight: normal;
+  font-size: 35px;
+  word-spacing: 5px;
+}
+
+.bpl_txt_1{
+  padding: 15px 0px;
+  letter-spacing: 0.5px;
+}
+.parents_8 {
+  position: relative;
+  width: 100%;
+  margin: 60px 0px;
+}
+
+
+
+.section_2 {
+  position: absolute;
+  top: 90px;
+  left: 72%;
+  transform: translateX(-50%);
+  width: 50%;
+  height: 220px;
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  padding: 30px 40px !important;
+  padding: 10px;
+}
+
+.parents_main_5 {
+  height: 150px;
+  overflow: hidden;
+  margin: 30px 20px;
+  display: flex;
+  align-items: center;
+}
+
+.parents_main_child5 {
+  position: relative;
+  width: 100%;
+  height: inherit;
+}
+
+.Hire-7 {
+  position: absolute;
+  height: inherit;
+  animation: scroll-6 var(--duration, 12s) linear infinite;
+  right: 100%;
+  animation-delay: calc(var(--duration, 12s) / 7 * (7 - var(--k)) * -1);
+}
+
+@keyframes scroll-6 {
+  to {
+    right: -250px;
+  }
+}
+
+.Hire-7 > img {
+  height: inherit;
+  width: 190px;
+  padding: 0px 15px;
+  object-fit: fill;
+}
+.parents_main_5:hover .Hire-7 {
+  animation-play-state: paused;
 }
