--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -295,3 +295,79 @@
         p{
           padding: 3px 0;
         }
+
+
+        .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .button_9 {
+      padding: 10px 20px;
+      font-size: 16px;
+      border: 1px solid #000;
+      background-color: white;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      gap: 5px;
+    }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.button_9 {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: 1px solid #000;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: white;
+  min-width: 150px;
+  box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+  padding: 10px 0;
+  z-index: 1;
+  height: auto;
+}
+
+.dropdown-content label {
+  display: flex;             
+  align-items: center;      
+  gap: 10px;                 
+  padding: 8px 12px;         
+  cursor: pointer;
+  font-size: 15px;
+  transition: background-color 0.3s ease;
+}
+
+.dropdown-content label:hover {
+  background-color: pink;
+}
+
+input[type="checkbox"] {
+  width: 16px;
+  height: 16px;
+  margin: 0;              
+  accent-color: black;      
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.parents_6 {
+  display: flex;
+  gap: 20px;
+  margin: 40px 50px;
+  flex-wrap: wrap;
+}
