--- a/CSS/Summar_flower.css
+++ b/CSS/Summar_flower.css
@@ -368,7 +368,7 @@ input[type="checkbox"] {
 .parents_6 {
   display: flex;
   gap: 20px;
-  margin: 40px 50px;
+  margin:30px 70px;
   flex-wrap: wrap;
 }
 
@@ -405,6 +405,7 @@ input[type="checkbox"] {
       display: flex;
       gap: 70px;
       justify-content:center;
+      margin-top: 30px;
     }
     .summar_text{
       text-align: center;
@@ -427,4 +428,254 @@ input[type="checkbox"] {
        font-size: 18px;
       color: #1a1b20;
       font-weight: bold;
+    }
+
+    .parents_8{
+       display: flex;
+      gap: 70px;
+      margin: 50px 0px;
+      justify-content:center;
+    }
+
+
+    .summar_text_2{
+      text-align: center;
+      padding: 14px 0px;
+      font-size: 18px;
+      color: #1a1b20;
+    }
+    .summar_text_2:hover{
+      text-decoration: underline;
+      color: #880e4f;
+    }
+
+    .summar_text_3:hover{
+      text-decoration: underline;
+      color: #880e4f;
+    }
+
+    .summar_text_3{
+      text-align: center;
+       font-size: 18px;
+      color: #1a1b20;
+      font-weight: bold;
+    }
+
+
+    .B{
+     width: 300px;
+  height: 295px;
+      overflow: hidden;
+     object-fit:fill;
+     border-radius: 10px;
+     border: 1px solid #f6ddcf;
+    }
+    .B .summer_img-1{
+      height: inherit;
+      width: inherit;
+      transition: 0.5s ease;
+    }
+    
+     .B .summer_img-1:hover{
+      transform: scale(1.1);
+    }
+
+     .B:hover{
+
+     transition: all 1s ease-in-out;
+  border-radius: 50%;
+   border: 1px solid black;
+    }
+
+
+     .parents_9{
+       display: flex;
+      gap: 70px;
+      margin-bottom: 50px;
+      justify-content:center;
+    }
+
+
+    .summar_text_4{
+      text-align: center;
+      padding: 14px 0px;
+      font-size: 18px;
+      color: #1a1b20;
+    }
+    .summar_text_4:hover{
+      text-decoration: underline;
+      color: #880e4f;
+    }
+
+    .summar_text_5:hover{
+      text-decoration: underline;
+      color: #880e4f;
+    }
+
+    .summar_text_5{
+      text-align: center;
+       font-size: 18px;
+      color: #1a1b20;
+      font-weight: bold;
+    }
+
+
+    .C{
+     width: 300px;
+  height: 295px;
+      overflow: hidden;
+     object-fit:fill;
+     border-radius: 10px;
+     border: 1px solid #f6ddcf;
+    }
+    .C .summer_img-2{
+      height: inherit;
+      width: inherit;
+      transition: 0.5s ease;
+    }
+    
+     .C .summer_img-2:hover{
+      transform: scale(1.1);
+    }
+
+     .C:hover{
+
+     transition: all 1s ease-in-out;
+  border-radius: 50%;
+   border: 1px solid black;
+    }
+
+
+
+
+
+    .parensts_10{
+  background-color:#f3eeea;
+  height: 850px;
+}
+.footer{
+  display: flex;
+  justify-content: space-around;
+}
+.proflowers-logo-1{
+  width: 250px;
+  margin: 35px 40px;
+  
+}
+
+.footer_text{
+  font-weight: bolder;
+  font-size: 16px;
+  padding: 15px 0px;
+}
+li{
+  padding: 5px 0px;
+  color: #261f23;
+}
+li:hover{
+  text-decoration: underline;
+  color: #880e4f;
+}
+.footer_text:hover{
+   text-decoration: underline;
+    color: #880e4f;
+}
+
+.footer-form{
+  width: 260px;
+  height: 49px;
+  text-align: center;
+  margin: 0px;
+}
+.footer-form_1{
+   display: flex;
+  
+}
+
+.button_form{
+  width: 90px;
+  height: 49px;
+  background-color: #261f23;
+  border-radius: 2px;
+  font-weight: bolder;
+  font-size: 15px;
+  border: transparent;
+  color: #fff;
+}
+
+.tooltipexm_4{
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
+    }
+
+    .tooltipexm_4 .tooltipexam_text-4 {
+      visibility: hidden;
+      width: 80px;
+   background: linear-gradient(45deg,#9b5aeb,#dc4596);
+      color: #fff;
+      text-align: center;
+      border-radius: 25px;
+      padding: 6px;
+      position: absolute;
+      z-index: 1;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .tooltipexm_4:hover .tooltipexam_text-4 {
+      visibility: visible;
+      opacity: 1;
+    }
+    .facebook_img{
+       width: 40px;
+       height: 40px;
+    }
+    
+    .tooltipexm_3{
+      position: relative;
+      display: inline-block;
+      cursor: pointer;
+    }
+
+    .tooltipexm_3 .tooltipexam_text-3 {
+      visibility: hidden;
+      width: 80px;
+    background: linear-gradient(45deg,#9b5aeb,#dc4596);
+      color: #fff;
+      text-align: center;
+      border-radius: 30px;
+      padding: 6px;
+      position: absolute;
+      z-index: 1;
+      bottom: 120%;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    .tooltipexm_3:hover .tooltipexam_text-3 {
+      visibility: visible;
+      opacity: 1;
+    }
+    .tiktok_img{
+       width: 40px;
+       height: 35px;
+    }
+    .footerchilde_1{
+      display: flex;
+      margin: 20px 0px;
+      gap: 19px;
+    }
+  
+    .lasfooter_text{
+      text-align: center;
+       margin: 80px 0px;
+    }
+    span{
+      padding:0px 5px;
     }
