--- a/CSS/SHOP_PRIDE.css
+++ b/CSS/SHOP_PRIDE.css
@@ -679,3 +679,118 @@ li:hover{
     span{
       padding:0px 5px;
     }
+
+
+      @media (min-width: 1366px){
+    .parents_7{
+      gap: 60px;
+    }
+    
+
+    .A,.B,.C{
+     width: 370px;
+  height: 350px;
+      overflow: hidden;
+     object-fit:fill;
+     border-radius: 10px;
+     border: 1px solid #f6ddcf;
+    }
+
+.summar_text,.summar_text_2,.summar_text_4{
+    text-align: center;
+    padding: 15px 0px;
+    font-size: 24px;
+}
+.summar_text_1,.summar_text_3,.summar_text_5 {
+  font-size: 24px;
+}
+
+.fieldset-1{
+          width: 330px;
+          height: 68px;
+      
+        }
+        .fieldset-2{
+          width: 300px;
+          height: 68px;
+        
+        }
+
+    .Calendar-img {
+    width: 49px;
+    height: 57px;
+    top: 10px;
+    left: 252px;
+}
+.star_3{
+  font-size: 30px;
+}
+.shopnow {
+    width: 145px;
+    padding: 18px 0px;
+    font-weight: 550;
+    height: 57px;
+    margin: 8px 7px;
+    border-radius: 4px;
+}
+.star_1 {
+    gap: 10px;
+    padding: 40px 247px;
+}
+    input, input :focus {
+    font-size: 20px;
+    padding: 7px 0px;
+    margin-left: 17px;
+}
+
+legend{
+  margin: 0px 15px;
+} 
+
+.Summer_text {
+    font-size: 40px;
+    padding: 10px 0px;
+    font-weight: 500;
+    word-wrap: 5px;
+}
+p{
+  font-size:18px;
+}
+
+.parents_6 {
+    display: flex;
+    gap: 20px;
+    margin: 35px 73px;
+    flex-wrap: wrap;
+}
+.button-1 {
+    width: 141px;
+    height: 40px;
+    font-size: 22px;
+}
+
+.Flowerimg-1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding: 16px 60px;
+    border: 1px solid #fffcf9;
+    background-color: #fffcf9;
+    gap: 20px;
+    font-size: 14px;
+    height: 69px;
+    font-family: Arial, sans-serif;
+    font-weight: 800;
+}
+.search {
+    width: 25px;
+    height: 28px;
+}
+.nav2-img {
+    display: flex
+;
+    gap: 5px;
+}
+
+
+     }
