--- a/CSS/Farther_gift.css
+++ b/CSS/Farther_gift.css
@@ -681,7 +681,7 @@ li:hover{
     }
 
 
-      @media (min-width: 1366px){
+     @media (min-width: 1366px){
     .parents_7{
       gap: 60px;
     }
@@ -754,7 +754,7 @@ legend{
     word-wrap: 5px;
 }
 p{
-  font-size:18px;
+  font-size:20px !important;
 }
 
 .parents_6 {
@@ -791,6 +791,38 @@ p{
 ;
     gap: 5px;
 }
+.proflowers-logo-1 {
+    width: 298px;
+    margin: 45px 40px;
+}
+
+.footer_text {
+    font-weight: bolder;
+    font-size: 22px;
+    padding: 15px 0px;
+}
+
+li {
+    padding: 6px 0px;
+    font-size: 20px;
+    color: #261f23;
+}
+.footerchilde_1 {
+    display: flex
+;
+    margin: 26px 0px;
+    gap: 22px;
+}
+.parensts_10 {
+    background-color: #f3eeea;
+    height: 1011px;
+}
+span {
+    padding: 0px 5px;
+    font-size: 20px;
+}
+
+
 
 
      }
