--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1447,7 +1447,36 @@ font-size: 30px;
 .Flowerimg-1{
   font-size: 15px;
 }
+.proflowers-logo-1 {
+    width: 298px;
+    margin: 45px 40px;
+}
 
+.footer_text {
+    font-weight: bolder;
+    font-size: 22px;
+    padding: 15px 0px;
+}
+
+li {
+    padding: 6px 0px;
+    font-size: 20px;
+    color: #261f23;
+}
+.footerchilde_1 {
+    display: flex
+;
+    margin: 26px 0px;
+    gap: 22px;
+}
+.parensts_10 {
+    background-color: #f3eeea;
+    height: 1011px;
+}
+span {
+    padding: 0px 5px;
+    font-size: 20px;
+}
 
 
  }
