--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1477,6 +1477,11 @@ span {
     padding: 0px 5px;
     font-size: 20px;
 }
-
+.Calendar-img {
+        width: 55px;
+        height: 58px;
+        top: 9px;
+        left: 252px;
+    }
 
  }
