--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1335,6 +1335,7 @@ li:hover{
 }
 .section_1,.section_2{
   height: 253px;
+  top:66px;
 }
 .pnk_text,.bpl_text {
   font-size: 40px;
@@ -1483,5 +1484,67 @@ span {
         top: 7px;
         left: 250px;
     }
+    .pnk_bk_img,.bpl_bk_img {
+    width: 100%;
+    height: 391px;
+    display: block;
+    position: relative;
+    z-index: 0;
+}
 
- }
+ .carousel img {
+      width: 380px;
+      height: 250px;
+    }
+
+    .slider_3D {
+      background: linear-gradient(to right,#f8c2e0, #aae0d0,#e0c3fc);
+      display: flex; 
+      justify-content: center; 
+      margin: 20px 0px;
+      align-items: center;    
+      height: 420px; 
+      font-family: sans-serif;
+      width: 100%;
+    }
+
+    .carousel-container {
+      width: 300px;
+      height:299px;
+      perspective: 1000px;
+      position: relative;
+    }
+
+    .carousel {
+      width: 100%; height: 100%;
+      position: relative;
+      transform-style: preserve-3d;
+    }
+
+     .btns {
+      position: absolute; 
+      bottom: -35px;
+      width: 120%; 
+      display: flex;
+      justify-content: space-between;
+    }
+      .btns button:hover{
+        background-color:black;
+        color: #fff;
+        border-radius: 50%;
+        transition: all 0.5s ease-in-out;
+      }
+    .btns button {
+      background: #fff; 
+      border: none;
+      padding: 10px 20px; 
+      font-size: 18px;
+      cursor: pointer; 
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+
+    
+  }
+   
