--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1526,10 +1526,8 @@ span {
 
     }
     
-    /*{
-    font-size: 35px;
-    font-weight: bold;
-}*/
-    
+    .tooltipexm_41 .tooltipexam_text-41 {
+      font-size: 20px;
+    }
   }
    
