--- a/SUMMAR_CSS/SF1.css
+++ b/SUMMAR_CSS/SF1.css
@@ -554,20 +554,22 @@ li:hover{
 }
 
     .A {
-    width: 220px;
+    width: 210px;
     height: 80px;
     padding: 26px 0px;
     font-size: 25px;
+     border: 3px solid black;
 }
 .B{
-   width: 220px;
+   width: 210px;
     height: 80px;
      padding: 25px 0px;
      font-size: 25px;
+      border: 3px solid gainsboro;
 }
 
 .fieldset-1,.fieldset-2 {
-    width: 450px;
+    width: 430px;
     height: 78px;
 }
 input, input :focus {
