--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1364,7 +1364,7 @@ li:hover{
 }
 .happiest_3,.blooms_3{
   border: 2px solid #f3eeea;
-  width: 100%;
+  width: 762px;
    height: 380px;
    background-color: #eee1d6;
    padding: 100px 0px;
