--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1613,3 +1613,216 @@ span{
 }
 
      }
+
+
+      @media (max-width: 430px){
+
+
+      .summer_img, .Farther_img ,.Farther_img,.Sweet_img ,.modern_img{
+    display: flex;
+    overflow: scroll;
+    justify-content: space-evenly;
+    gap: 20px;
+    margin: 20px 0px;
+}
+
+.blooms ,.happiest{
+  display:grid;
+}
+.text-3,.button-1 {
+  display: none;
+}
+.nav2-img>.search,.parents_wine_menu_list,.parents-1{
+  display: none;
+}
+.nav_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0px;
+   margin: 1px 0px;
+}
+
+    .search {
+        width: 25px;
+        height: 25px;
+    }
+
+.Flowerimg {
+    width: 181px;
+    height: 30px;
+    margin: 0px;
+}
+.Flowerimg-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 34px;
+}
+.top-banner a{
+  font-size: 8px;
+}
+.star_1{
+  display: grid;
+}
+
+.position-1 {
+    position: absolute;
+    top: 14px;
+    left: 50%;
+    z-index: 10;
+    width: 79%;
+    height:288px;
+    padding: 13px 30px;
+}
+
+.fieldset-1 {
+    width: 262px;
+    height: 54px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+.fieldset-2{
+      height: 54px;
+}
+.Calendar-img{
+  height: 44px;
+  width: 42px;
+}
+input, input :focus {
+    font-size: 16px;
+    padding: 5px 0px;
+}
+
+.buttonserch {
+    width: 272px;
+    height: 43px;
+    font-size: 18px;
+    margin: 13px 0px;
+}
+.summer_text {
+    font-size: 30px;
+    padding-top: 11px;
+}
+.button_2,.button_4,.button_6,.button_8  {
+    width: 169px;
+    height: 50px;
+    padding: 10px 0px;
+    margin-left: 134px;
+    font-size: 15px;
+}
+
+.happiest_img,.blooms_img {
+    width: 428px;
+    height: 255px;
+}
+.happiest_3, .blooms_3 {
+    border: 2px solid #f3eeea;
+    width: 427px;
+    height: 255px;
+    background-color: #eee1d6;
+    padding: 30px 0px;
+    word-wrap: 2px;
+}
+.button_3,.button_5 {
+    width: 158px;
+    height: 51px;
+    padding: 10px 0px;
+    margin: 0px 0px;
+    margin-left: 128px;
+    font-size: 13px;
+}
+.happiest_text,.blooms_text{
+  font-size: 33px;
+}
+.happiest_text-1 {
+    text-align: center;
+    padding: 17px 0px;
+    font-size: 14px;
+}
+.pnk_bk_img,.bpl_bk_img {
+    height: 250px;
+    width: 100%;
+}
+.section_1 {
+    top: 36px;
+    left: 34%;
+    width: 59%;
+    height: 176px;
+    padding: 15px 20px !important;
+      }
+
+          .section_2 {
+        top: 42px;
+        left: 67%;
+        width: 59%;
+        height: 176px;
+        padding: 20px 20px !important;
+    }
+
+      .pnk_text ,.bpl_text {
+        font-size: 22px;
+      }
+      .pank_txt_1 {
+    padding: 6px 0px;
+    font-size: 11px;
+    letter-spacing: 0.5px;
+}
+.bpl_txt_1 {
+  font-size: 14px;
+   padding: 6px 0px;
+}
+.button_7 {
+    width: 108px;
+    height: 38px;
+    padding: 13px 0px;
+    margin-left: 0px;
+    font-size: 10px;
+}
+ .parents_main_5,.parents_main_4{
+  height: 80px;
+  margin:20px 0px
+
+}
+
+.Hire-7 > img,.Hire-6 > img {
+  width: 110px;
+}
+
+li,.footer_text{
+  display: none;
+}
+.proflowers-logo-1 {
+    width: 250px;
+    margin: 25px 87px;
+}
+.footer-form {
+    width: 304px;
+    height: 48px;
+    text-align: center;
+     margin:0px;
+}
+.footer-form_1{
+  padding: 0px 20px;
+}
+.footerchilde_1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px 0px;
+    gap: 36px;
+}
+.lasfooter_text {
+    text-align: center;
+    margin: 18px 0px;
+    font-size: 12px;
+}
+.parensts_10 {
+    background-color: #f3eeea;
+    height: 300px;
+}
+.slider_3D{
+  display: none;
+}
+
+      }
